intentando registrar derivadas

--- a/Symbolics/symb_4d_F.ipynb
+++ b/Symbolics/symb_4d_F.ipynb
@@ -203,9 +203,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia (10 threads) 1.7.2",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
-   "name": "julia-(10-threads)-1.7"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
