--- a/Symbolics/short_example.ipynb
+++ b/Symbolics/short_example.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -26,8 +26,9 @@
     }
    ],
    "source": [
-    "@variables vs[1:3], t\n",
-    "vst = [vs[i] for i ∈ 1:3]\n",
+    "D = 4\n",
+    "@variables vs[1:D], t\n",
+    "vst = [vs[i] for i ∈ 1:D]\n",
     "\n",
     "μ_c(vs) = vs'*vs\n",
     "μ_s(x...) = μ_c(collect(x))\n",
@@ -40,27 +41,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "\\left( \\mathrm{adjoint}\\left( vs \\right) vs \\right)^{2}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "(adjoint(vs)*vs)^2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "μ_s(vs)^2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       "2 vs_1\n",
+       "\\left( h\\left( t \\right) \\right)^{2}\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "2vs[1]"
+       "h(t)^2"
       ]
      },
      "metadata": {},
@@ -68,32 +84,26 @@
     }
    ],
    "source": [
-    "for i in 1:3\n",
-    "Symbolics.derivative(::typeof(μ_s), args::NTuple{1,Any}, ::Val{i}) = 2*args[i]\n",
+    "h(t)^2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in 1:D\n",
+    "Symbolics.derivative(::typeof(μ_s), args::NTuple{D,Any}, ::Val{i}) = 2*args[i]\n",
     "end\n",
     "Symbolics.derivative(μ_s(vs...),vs[1] )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "\\begin{equation}\n",
-       "2 \\left( 2 vs_1^{2} + 2 vs_2^{2} + 2 vs_3^{2} \\right) vs_1\n",
-       "\\end{equation}\n"
-      ],
-      "text/plain": [
-       "2(2(vs[1]^2) + 2(vs[2]^2) + 2(vs[3]^2))*vs[1]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Symbolics.derivative(μ_s(vs...)^2, vs[1] )"
    ]
@@ -112,27 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "\\begin{equation}\n",
-       "\\left[\n",
-       "\\begin{array}{c}\n",
-       "x_1 \\\\\n",
-       "x_2 \\\\\n",
-       "x_3 \\\\\n",
-       "\\end{array}\n",
-       "\\right]\n",
-       "\\end{equation}\n"
-      ],
       "text/plain": [
-       "3-element Vector{Num}:\n",
-       " x[1]\n",
-       " x[2]\n",
-       " x[3]"
+       "(x[1], x[2], x[3], x[4])"
       ]
      },
      "metadata": {},
@@ -140,51 +136,90 @@
     }
    ],
    "source": [
-    "@variables  x[1:3] \n",
+    "D = 4\n",
+    "@variables  x[1:D] \n",
     "@syms ν(x)\n",
-    "xs = [x[i] for i ∈ 1:3]\n",
-    "ν_s(x) = (x...) ->  ν(collect(x))\n",
-    "@register_symbolic ν_s(vs) \n",
-    "xs"
+    "xs = [x[i] for i ∈ 1:D]\n",
+    "p = Num.(Tuple(xs))\n",
+    "ν_s(p...) = "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching ν_s(::Num, ::Num, ::Num)\nClosest candidates are:\n  ν_s(::Num) at ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:51\n  ν_s(::Any) at ~/Julia/Fluidos_Conformes/Symbolics/short_example.ipynb:4",
+     "ename": "LoadError",
+     "evalue": "LoadError: Invalid argument format p...\nin expression starting at /Users/reula/Julia/Fluidos_Conformes/Symbolics/short_example.ipynb:2",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching ν_s(::Num, ::Num, ::Num)\n",
-      "Closest candidates are:\n",
-      "  ν_s(::Num) at ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:51\n",
-      "  ν_s(::Any) at ~/Julia/Fluidos_Conformes/Symbolics/short_example.ipynb:4\n",
+      "LoadError: Invalid argument format p...\n",
+      "in expression starting at /Users/reula/Julia/Fluidos_Conformes/Symbolics/short_example.ipynb:2\n",
       "\n",
       "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/Julia/Fluidos_Conformes/Symbolics/short_example.ipynb:4"
+      "  [1] error(s::String)\n",
+      "    @ Base ./error.jl:35\n",
+      "  [2] (::Symbolics.var\"#171#172\")(x::Expr)\n",
+      "    @ Symbolics ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:47\n",
+      "  [3] iterate\n",
+      "    @ ./generator.jl:47 [inlined]\n",
+      "  [4] _collect(c::Vector{Any}, itr::Base.Generator{Vector{Any}, Symbolics.var\"#171#172\"}, #unused#::Base.EltypeUnknown, isz::Base.HasShape{1})\n",
+      "    @ Base ./array.jl:807\n",
+      "  [5] collect_similar(cont::Vector{Any}, itr::Base.Generator{Vector{Any}, Symbolics.var\"#171#172\"})\n",
+      "    @ Base ./array.jl:716\n",
+      "  [6] map(f::Function, A::Vector{Any})\n",
+      "    @ Base ./abstractarray.jl:2933\n",
+      "  [7] var\"@register_symbolic\"(__source__::LineNumberNode, __module__::Module, expr::Any, define_promotion::Any, Ts::Any)\n",
+      "    @ Symbolics ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:38\n",
+      "  [8] var\"@register_symbolic\"(__source__::LineNumberNode, __module__::Module, expr::Any)\n",
+      "    @ Symbolics ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:26\n",
+      "  [9] eval\n",
+      "    @ ./boot.jl:368 [inlined]\n",
+      " [10] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base ./loading.jl:1428\n",
+      " [11] #invokelatest#2\n",
+      "    @ ./essentials.jl:729 [inlined]\n",
+      " [12] invokelatest\n",
+      "    @ ./essentials.jl:726 [inlined]\n",
+      " [13] (::VSCodeServer.var\"#198#199\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.7.12/scripts/packages/VSCodeServer/src/serve_notebook.jl:19\n",
+      " [14] withpath(f::VSCodeServer.var\"#198#199\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.7.12/scripts/packages/VSCodeServer/src/repl.jl:249\n",
+      " [15] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.7.12/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
+      " [16] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
+      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.7.12/scripts/packages/JSONRPC/src/typed.jl:67\n",
+      " [17] serve_notebook(pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; crashreporting_pipename::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.7.12/scripts/packages/VSCodeServer/src/serve_notebook.jl:139\n",
+      " [18] top-level scope\n",
+      "    @ ~/.vscode/extensions/julialang.language-julia-1.7.12/scripts/notebook/notebook.jl:32"
      ]
     }
    ],
    "source": [
-    "for i in 1:3\n",
-    "    Symbolics.derivative(::typeof(ν_s), args::NTuple{1,Any}, ::Val{i}) = 2*args[i]\n",
-    "end\n",
-    "Symbolics.derivative(ν_s(x...),x[1] )"
+    "\n",
+    "@register_symbolic ν_s(p...) \n",
+    "#@register_symbolic ν(xs...) \n",
+    "#ν(xs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "f (generic function with 1 method)"
+       "(x[1], x[2], x[3], x[4])"
       ]
      },
      "metadata": {},
@@ -192,26 +227,53 @@
     }
    ],
    "source": [
-    "f(y) = y'*y"
+    "typeof(xs)\n",
+    "\n",
+    "#convert(Tuple, x)\n",
+    "Num.(Tuple(xs))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Vector{Num}\u001b[90m (alias for \u001b[39m\u001b[90mArray{Num, 1}\u001b[39m\u001b[90m)\u001b[39m"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "typeof(Symbolics.scalarize(x))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "g (generic function with 2 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "g(x) = (x...) -> f(collect(x))"
+    "for i in 1:D\n",
+    "    Symbolics.derivative(::typeof(ν_s), args::Symbolics.Arr{Num, 1}, ::Val{i}) = 2*args[i]\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for i in 1:D\n",
+    "    #Symbolics.derivative(::typeof(ν), args::Symbolics.Arr{Num, 1}, ::Val{i}) = 2*args[i]\n",
+    "    Symbolics.derivative(::typeof(ν), args::NTuple{D,Any}, ::Val{i}) = 2*args[i]\n",
+    "end"
    ]
   },
   {
@@ -220,17 +282,104 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "#79 (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching ν(::NTuple{4, Num})\nClosest candidates are:\n  ν(!Matched::SymbolicUtils.Symbolic{<:Real}) at ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:51\n  ν(!Matched::Num) at ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:51",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching ν(::NTuple{4, Num})\n",
+      "Closest candidates are:\n",
+      "  ν(!Matched::SymbolicUtils.Symbolic{<:Real}) at ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:51\n",
+      "  ν(!Matched::Num) at ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:51\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/Julia/Fluidos_Conformes/Symbolics/short_example.ipynb:1"
+     ]
     }
    ],
    "source": [
+    "Symbolics.derivative(ν(Num.(Tuple(xs))),Val{1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching ν(::NTuple{4, Num})\nClosest candidates are:\n  ν(!Matched::SymbolicUtils.Symbolic{<:Real}) at ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:51\n  ν(!Matched::Num) at ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:51",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching ν(::NTuple{4, Num})\n",
+      "Closest candidates are:\n",
+      "  ν(!Matched::SymbolicUtils.Symbolic{<:Real}) at ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:51\n",
+      "  ν(!Matched::Num) at ~/.julia/packages/Symbolics/J8IHJ/src/register.jl:51\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] ν_s(x::Vector{Num})\n",
+      "   @ Main ~/Julia/Fluidos_Conformes/Symbolics/short_example.ipynb:5\n",
+      " [2] top-level scope\n",
+      "   @ ~/Julia/Fluidos_Conformes/Symbolics/short_example.ipynb:2"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "Symbolics.derivative(ν_s(xs),Val{1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f(y) = y'*y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g(x) = (x...) -> f(collect(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "g((1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching l(::Tuple{Int64, Int64})\nClosest candidates are:\n  l(::Any, !Matched::Any) at ~/Julia/Fluidos_Conformes/Symbolics/short_example.ipynb:1",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching l(::Tuple{Int64, Int64})\n",
+      "Closest candidates are:\n",
+      "  l(::Any, !Matched::Any) at ~/Julia/Fluidos_Conformes/Symbolics/short_example.ipynb:1\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/Julia/Fluidos_Conformes/Symbolics/short_example.ipynb:3"
+     ]
+    }
+   ],
+   "source": [
+    "l(x,y) = x+y\n",
+    "\n",
+    "l((3,4),)"
    ]
   },
   {
